Added theme switcher

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,9 @@
     <link rel="icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webapp" />
     <link rel="stylesheet" href="content/css/loading.css" />
+    <!-- placeholder link to load bootswatch themes, title holds the current applied theme name-->
+    <link rel="stylesheet" href="" id="bootswatch-css" title="Default" />
+    <!-- build:css assets/styles/main.css -->
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
   </head>
   <body>
